--- a/View/HomeScreen/components/setting_dropdown.kv
+++ b/View/HomeScreen/components/setting_dropdown.kv
@@ -1,5 +1,5 @@
-#: import OptionsNavigationDrawer libs.baseclass.components.settings_dropdown.OptionsNavigationDrawer
-#: import OptionsItem libs.baseclass.components.settings_dropdown.OptionsItem
+#: import OptionsNavigationDrawer View.HomeScreen.components.settings_dropdown.OptionsNavigationDrawer
+#: import OptionsItem View.HomeScreen.components.settings_dropdown.OptionsItem
 
 <OptionsItem>:
 
@@ -10,21 +10,21 @@
         values: root.values
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}
         open_context: 'bottom'
-        text_color: app.storage_helper.color('blue')
-        background_color: app.storage_helper.color('light_pink')
+        text_color: app.storage_manager.get_color('blue')
+        background_color: app.storage_manager.get_color('light_pink')
         background_normal: ''
 
         IconLeftWidget:
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             icon: root.icon
-            text_color: app.storage_helper.color('blue')
+            text_color: app.storage_manager.get_color('blue')
             # disabled: True
 
 <OptionsNavigationDrawer>:
     orientation: "vertical"
     padding: "8dp"
     spacing: "8dp"
-    md_bg_color: app.storage_helper.color('light_pink')
+    md_bg_color: app.storage_manager.get_color('light_pink')
 
     MDLabel:
         text: "Iestatījumi"
