* Game screen redesign

--- a/View/TeamCreationScreen/team_creation_screen.kv
+++ b/View/TeamCreationScreen/team_creation_screen.kv
@@ -21,7 +21,7 @@
                 text_color: app.storage_manager.get_color('light_pink')
                 user_font_size: 32
                 pos_hint: {"center_y": 0.5, "left": 1}
-                on_press: app.root.set_current_screen("Home")
+                on_press: app.root.set_current_screen("Home", "right")
 
             MDLabel:
                 text: "Izveido komandas:"
