--- a/View/GameScreen/game_screen.kv
+++ b/View/GameScreen/game_screen.kv
@@ -8,11 +8,13 @@
         padding: "10dp"
         spacing: "10dp"
         
-        # Top part
+        ### Top
         MDBoxLayout:
-            size_hint_y: 0.1
+            size_hint_y: 0.15
             orientation: 'vertical'
+            spacing: "10dp"
 
+            # Round number, current team
             MDLabel:
                 id: round_label
                 text: "Round 1"
@@ -23,61 +25,92 @@
                 color: "#ffffff"
 
             MDLabel:
-                id: team_label
-                text: "Komanda: "
+                text: "Komanda:"
                 font_size: 48
                 halign: 'center'
                 valign: 'center'
                 bold: True
                 color: "#ffffff"
 
-        # Mid part
-        MDBoxLayout:
-            size_hint_y: 0.8
+            MDLabel:
+                id: team_label
+                text: ""
+                font_size: 48
+                halign: 'center'
+                valign: 'center'
+                bold: True
+                color: "#ffffff"
 
+        ### Middle
+        MDBoxLayout:
+            size_hint_y: 0.75
+            padding: "10dp"
+            spacing: "10dp"
+
+            # Game card part
             MDBoxLayout:
                 orientation: 'vertical'
+                spacing: "10dp"
+                md_bg_color: app.storage_manager.get_color('light_blue')
 
-                canvas.before:
-                    Color:
-                        rgba: app.storage_manager.get_color('light_blue')
-                    
-                MDSwiper:
-                    id: card_swiper
-                    on_swipe: root.show_new_word()
-                    on_swipe_right: root.add_score()
+                MDBoxLayout:
+                    orientation: "vertical"
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    md_bg_color: app.storage_manager.get_color('blue')
 
-                    MDSwiperItem:
+                    MDRaisedButton:
+                        text: "Izlaist"
+                        md_bg_color: 1, 0, 0, 0.7
+                        on_release: root.show_new_word()
 
-                        MDLabel:
-                            id: guess_word
-                            text: ""
-                            halign: 'center'
-                            valign: 'center'
-                            color: "#ffffff"
-                            font_size: 64
-                            bold: True
+                MDBoxLayout:
+                    orientation: "vertical"
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    md_bg_color: app.storage_manager.get_color('blue')
 
+                    MDLabel:
+                        id: guess_word
+                        text: "- - -"
+                        halign: 'center'
+                        valign: 'center'
+                        font_size: 64
+                        bold: True
+
+                MDBoxLayout:
+                    orientation: "vertical"
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    md_bg_color: app.storage_manager.get_color('blue')
+
+                    MDRaisedButton:
+                        text: "Uzminēts"
+                        md_bg_color: 0, 1, 0, 0.7
+                        on_release: root.add_score()
+                
+            # Time progress bar and label
             MDBoxLayout:
                 size_hint_x: 0.1
                 orientation: 'vertical'
 
                 MDLabel:
-                    size_hint_y: 0.1
                     id: timer_label
-                    text: "100"
+                    size_hint_y: 0.1
+                    pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+                    text: "60"
                     color: "#ffffff"
+                    halign: 'center'
+                    valign: 'center'
                     font_size: 32
                     bold: True
 
                 MDProgressBar:
-                    size_hint_y: 0.9
                     id: timer_bar
+                    size_hint: 0.5, 0.9
+                    pos_hint: {'center_x': 0.5, 'center_y': 0.5}
                     orientation: "vertical"
                     value: 100
-                    color: (0, 1, 0, 0.8)
+                    color: (0, 1, 0, 0.7)
 
-        # Bottom part
+        ### Bottom
         MDBoxLayout:
             size_hint_y: 0.1
             orientation: 'vertical'
