--- a/View/TeamCreationScreen/team_creation_screen.kv
+++ b/View/TeamCreationScreen/team_creation_screen.kv
@@ -44,13 +44,13 @@
                 MDTextField:
                     id: team_name_input
                     hint_text: "Komandas nosaukums"
-                    max_text_length: 20
+                    max_text_length: 10
                     multiline: False
                     color_mode: 'Custom'
                     line_color: app.storage_manager.get_color('blue')
                     fill_color: app.storage_manager.get_color('light_pink')
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}
-                    mode: 'round'
+                    # mode: 'round'
                 
                 MDIconButton:
                     icon: 'content-save-plus-outline'
