* Bring back game button colors

--- a/View/GameScreen/game_screen.kv
+++ b/View/GameScreen/game_screen.kv
@@ -81,6 +81,7 @@
                         id: word_skipped_btn
                         text: "Izlaist"
                         bold: True
+                        md_bg_color: "#FF0000"
                         pos_hint: {"center_x": 0.25, "center_y": 0.5}
                         size_hint: 0.5, 0.5
                         on_release: root.show_new_word()
@@ -89,6 +90,7 @@
                         id: word_guessed_btn
                         text: "Uzminēts"
                         bold: True
+                        md_bg_color: "#00FF00"
                         pos_hint: {"center_x": 0.25, "center_y": 0.5}
                         size_hint: 0.5, 0.5
                         on_release: root.add_score()
