--- a/View/GameResultsScreen/game_results_screen.kv
+++ b/View/GameResultsScreen/game_results_screen.kv
@@ -1,1 +1,69 @@
 #: import GameResultsScreen View.GameResultsScreen.game_results_screen.GameResultsScreen
+
+<GameResultsScreen>:
+    name: "Game Results"
+
+    MDBoxLayout:
+        orientation: 'vertical'
+        padding: "10dp"
+        spacing: "10dp"
+        
+        MDBoxLayout:
+            orientation: 'vertical'
+            size_hint_y: 0.3
+            padding: "10dp"
+            spacing: "10dp"
+
+            MDIconButton:
+                icon: 'menu'
+                theme_text_color: "Custom"
+                md_bg_color: 0, 0, 0, .2
+                # text_color: 
+                user_font_size: 32
+                pos_hint: {"center_y": 0.5, "left": 1}
+                on_press: nav_drawer.set_state("open")
+
+            MDLabel:
+                text: "Vārdu Spēle"
+                halign: 'center'
+                valign: 'center'
+                # color: 
+                font_size: 64
+                bold: True
+
+        MDBoxLayout:
+            orientation: 'vertical'
+            size_hint_y: 0.5
+            padding: "10dp"
+            spacing: "5dp"
+
+            MDLabel:
+                text: "Kategorija:"
+                # color: 
+                font_size: 64
+                bold: True
+                halign: 'center'
+                valign: 'bottom'
+
+            MDLabel:
+                id: home_category_label
+                text: "Random"
+                # color: 
+                font_size: 48
+                bold: True
+                halign: 'center'
+                valign: 'top'
+            
+        MDBoxLayout:
+            size_hint_y: 0.5
+            orientation: 'vertical'
+
+            MDRoundFlatButton:
+                id: new_game_btn
+                pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+                text: "Jauna Spēle"
+                font_size: 48
+                # text_color: 
+                line_width: 2
+                # line_color: 
+                on_press: app.root.set_current_screen("Team Creation")
