--- a/View/TeamCreationScreen/team_creation_screen.kv
+++ b/View/TeamCreationScreen/team_creation_screen.kv
@@ -18,7 +18,7 @@
                 icon: 'arrow-left'
                 theme_text_color: "Custom"
                 md_bg_color: 0, 0, 0, .2
-                text_color: app.storage_manager.get_color('light_pink')
+                # text_color: 
                 user_font_size: 32
                 pos_hint: {"center_y": 0.5, "left": 1}
                 on_press: app.root.set_current_screen("Home", "right")
@@ -27,7 +27,7 @@
                 text: "Izveido komandas:"
                 halign: 'center'
                 valign: 'center'
-                color: app.storage_manager.get_color('light_pink')
+                # color: 
                 font_size: 64
                 bold: True
 
@@ -47,15 +47,15 @@
                     max_text_length: 10
                     multiline: False
                     color_mode: 'Custom'
-                    line_color: app.storage_manager.get_color('blue')
-                    fill_color: app.storage_manager.get_color('light_pink')
+                    # line_color: 
+                    # fill_color: 
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}
                     # mode: 'round'
                 
                 MDIconButton:
                     icon: 'content-save-plus-outline'
                     theme_text_color: "Custom"
-                    text_color: app.storage_manager.get_color('light_pink')
+                    # text_color: 
                     user_font_size: 32
                     pos_hint: {"center_y": 0.5, "left": 1}
                     on_press: root.add_team()
@@ -66,7 +66,7 @@
                 orientation: "vertical"
                 padding: "8dp"
                 spacing: "8dp"
-                md_bg_color: app.storage_manager.get_color('light_pink')
+                # md_bg_color: 
 
                 MDLabel:
                     size_hint_y: 0.1
@@ -76,7 +76,8 @@
                     valign: 'center'
                     bold: True
 
-                ScrollView:
+                MDScrollView:
+                    always_overscroll: False
 
                     MDList:
                         id: team_list
@@ -88,7 +89,7 @@
                 id: new_game_btn
                 text: "Spēlēt"
                 font_size: 48
-                text_color: app.storage_manager.get_color('light_blue')
+                # text_color: 
                 line_width: 2
-                line_color: app.storage_manager.get_color('blue')
+                # line_color: 
                 on_press: root.go_to_game()
