* Refactor main widgets * Add functional after-round dialog

--- a/View/AppLayout/app_layout.kv
+++ b/View/AppLayout/app_layout.kv
@@ -1,6 +1,10 @@
+# Import Python files
 #: import AppLayout View.AppLayout.app_layout.AppLayout
 
 #  Kivy file references
+#: include View/HomeScreen/components/settings_drawer.kv
+#: include View/common/components/widget_templates.kv
+
 #: include View/HomeScreen/home_screen.kv
 #: include View/TeamCreationScreen/team_creation_screen.kv
 #: include View/GameScreen/game_screen.kv
