--- a/View/RoundResultsScreen/round_results_screen.kv
+++ b/View/RoundResultsScreen/round_results_screen.kv
@@ -3,9 +3,10 @@
 <RoundResultsScreen>:
     name: "Round Results"
 
-    MDBoxLayout:
-        orientation: "vertical"
-        spacing: "12dp"
-        
-        MDList:
-            id: results_list
+    MainBox:
+
+        TopBoxV:
+
+        MiddleBoxV:
+
+        BottomBoxV:
