* Update game navigation logic

--- a/View/GameResultsScreen/game_results_screen.kv
+++ b/View/GameResultsScreen/game_results_screen.kv
@@ -7,6 +7,15 @@
 
         TopBoxV:
 
+            HeaderLabel:
+                id: header_label
+                text: "Spēles rezultāti"
+
         MiddleBoxV:
 
         BottomBoxV:
+
+            RoundTextButton:
+                id: end_game_btn
+                text: "Uz sākumu"
+                on_release: root.continue_game()
