--- a/View/HomeScreen/home_screen.kv
+++ b/View/HomeScreen/home_screen.kv
@@ -38,7 +38,7 @@
             RoundTextButton:
                 id: new_game_btn
                 text: "Jauna Spēle"
-                on_press: app.root.set_current_screen("Team Creation")
+                on_press: app.root.go_to("Team Creation")
 
     SettingsDrawer:
         id: nav_drawer
