--- a/View/TeamCreationScreen/team_creation_screen.kv
+++ b/View/TeamCreationScreen/team_creation_screen.kv
@@ -9,7 +9,7 @@
 
             TopLeftButton:
                 icon: 'arrow-left'
-                on_press: app.root.set_current_screen("Home", "right")
+                on_press: app.root.go_to("Home", "right")
 
             HeaderLabel:
                 text: "Izveido komandas:"
