* Add more game logic - played word display, round results & game resutls

--- a/View/GameResultsScreen/game_results_screen.kv
+++ b/View/GameResultsScreen/game_results_screen.kv
@@ -13,6 +13,11 @@
 
         MiddleBoxV:
 
+            ScrollView:
+
+                MDList:
+                    id: game_results_list
+
         BottomBoxV:
 
             RoundTextButton:
