--- a/View/RoundResultsScreen/round_results_screen.kv
+++ b/View/RoundResultsScreen/round_results_screen.kv
@@ -13,9 +13,14 @@
 
             HeaderLabel:
                 id: header_label
-                text: f"{app.game_manager.round_number}. kārtas rezultāti"
+                text: ""
 
         MiddleBoxV:
+
+            ScrollView:
+
+                MDList:
+                    id: round_results_list
 
         BottomBoxV:
 
