--- a/View/AppLayout/app_layout.kv
+++ b/View/AppLayout/app_layout.kv
@@ -8,7 +8,7 @@
 #: include View/HomeScreen/home_screen.kv
 #: include View/TeamCreationScreen/team_creation_screen.kv
 #: include View/GameScreen/game_screen.kv
-#: include View/RoundStatisticsScreen/round_statistics_screen.kv
+#: include View/TurnStatisticsScreen/turn_statistics_screen.kv
 #: include View/RoundResultsScreen/round_results_screen.kv
 #: include View/GameResultsScreen/game_results_screen.kv
 
@@ -29,8 +29,8 @@
             id: team_creation_screen
         GameScreen:
             id: game_screen
-        RoundStatisticsScreen:
-            id: round_statistics_screen
+        TurnStatisticsScreen:
+            id: turn_statistics_screen
         RoundResultsScreen:
             id: round_results_screen
         GameResultsScreen:
